# superwin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_out.txt  build_out2.txt  build_out3.txt  build_v212.txt  build_v213.txt  build_v214.txt  build_v220.txt  build_v230.txt  build_v231.txt  build_v232.txt
docs/: app.js  build_v230.txt  index.html  styles.css
installer/: SuperWin.iss  appcast.xml  package-release.ps1
notes/: RELEASE_2.0.0.md
src/: Version.h  app.manifest  main.cpp  version.rc
src/app/: AppHost.cpp  AppHost.h  HomePage.cpp  SettingsPage.cpp  Shell.cpp  Shell.h  Ui.h
src/core/: Autostart.cpp  Autostart.h  Hotkeys.cpp  Hotkeys.h  Settings.cpp  Settings.h  SingleInstance.cpp  SingleInstance.h  Strings.h  TrayIcon.cpp  TrayIcon.h  Updater.cpp  Updater.h
src/modules/alwaystop/: AlwaysOnTopPage.cpp
src/modules/calc/: CalcLogic.cpp  CalcLogic.h  CalcPage.cpp
src/modules/clipboard/: ClipPage.cpp  ClipPicker.cpp  ClipPicker.h  ClipStore.cpp  ClipStore.h  ClipText.cpp  ClipText.h
src/modules/colorpicker/: ColorPickerPage.cpp
src/modules/convert/: ConvertLogic.cpp  ConvertLogic.h  ConvertPage.cpp
src/modules/diagnostics/: DiagPage.cpp  HardwareProbe.cpp  HardwareProbe.h
src/modules/fileconv/: FileConvertPage.cpp  ImageConvertLogic.cpp  ImageConvertLogic.h
src/modules/graph/: Cas.cpp  Cas.h  Expr.cpp  Expr.h  GraphLogic.cpp  GraphLogic.h  GraphPage.cpp  Latex.cpp  Latex.h  MathField.cpp  MathField.h
src/modules/graph/web/: app.js  index.html  mathlive.min.js  style.css
src/modules/guid/: GuidLogic.cpp  GuidLogic.h  GuidPage.cpp
src/modules/hash/: HashLogic.cpp  HashLogic.h  HashPage.cpp
src/modules/jsonfmt/: JsonLogic.cpp  JsonLogic.h  JsonPage.cpp
src/modules/keepawake/: KeepAwakePage.cpp
src/modules/netinfo/: NetInfoLogic.cpp  NetInfoLogic.h  NetInfoPage.cpp
src/modules/notepad/: EditorPage.cpp
src/modules/password/: PasswordLogic.cpp  PasswordLogic.h  PasswordPage.cpp
src/modules/python/: PythonPage.cpp  PythonRunLogic.cpp  PythonRunLogic.h
src/modules/python/web/: app.js  index.html  style.css
src/modules/security/: SecurityLogic.cpp  SecurityLogic.h  SecurityPage.cpp
src/modules/snake/: SnakeLogic.cpp  SnakeLogic.h  SnakePage.cpp
src/modules/text/: TextLogic.cpp  TextLogic.h  TextPage.cpp
src/modules/volume/: AudioSessions.cpp  AudioSessions.h  VolumeMath.cpp  VolumeMath.h  VolumePage.cpp
tests/: CalcLogicTests.cpp  CasTests.cpp  ClipStoreTests.cpp  ConvertLogicTests.cpp  ExprTests.cpp  GraphLogicTests.cpp  GuidLogicTests.cpp  HashLogicTests.cpp  ImageConvertLogicTests.cpp  JsonLogicTests.cpp  LatexTests.cpp  PasswordLogicTests.cpp  PythonRunLogicTests.cpp  SecurityLogicTests.cpp  SnakeLogicTests.cpp  TextLogicTests.cpp  VolumeMathTests.cpp
